-Fix broken cramming plugin (reported by stevengeorg) 
-Fix encoding problems with import and export (reported by register2, 
 MarcoP, abacus).
-Make configuration storing more thread-safe. 
-Fix removing tags through card browser (reported by bvauquelin).
-Fix loss of keyboard focus when switching back to the main window
 (reported by Jan Egil Hagen and Dan Schmidt).
-Fix autoscaling sometimes not working under Linux.
-Fix error related missing idna encoding when starting server 
 (reported by Andrea Giordano).


Mnemosyne 2.4 : 2016-12-05

-Upgraded all code to Python3 and PyQt5, so that Mnemosyne no longer
 depends on libraries which are gradually becoming unsupported.
-The move to PyQt5 enabled to show progress bars with percentages for
 certain long operations like initial sync.
-Improved startup speed. 
-New command line option "--high-dpi-scaling" to enable scaling for displays
 with high DPI values. Not enabled by default because it can cause some
 issues with multiple connected displays.
-Tag combobox now expands to give suggestions for tags also when using more
 than one tag (patch by Emilian Mihalache)


Android 20160502:

-Upgraded backend to Mnemosyne 2.3.6, meaning that logs older than 1 year
 are now automatically archived in a separate file, which is not backed 
 up all the time, speeding up the sync process and taking less space.
-Switched to Material design, also making it easier to access the menu on 
 some devices which had problems with this before.
-Implemented full screen immersive mode for Android KitKat and higher.
-Buttons are now in the middle of the screen to better facilitate
 ergonomic one-handed operation.


Mnemosyne 2.3.6 : 2016-05-02

-Logs older than 1 year are now automatically archived in a separate file,
 which is not backed up all the time, speeding up e.g. the sync process.
-The card browser now supports more html formatting, e.g. ruby tags. 
-URLs in cards in the review widget now open in an external browser, rather 